update color and others

--- a/src/assets/scss/pages.scss
+++ b/src/assets/scss/pages.scss
@@ -325,6 +325,7 @@ $prm-font-size : 12px;
 /*privacy-policy-content*/
 #privacy-policy-content,
 #terms-and-conditions-content {
+
     margin: 7em 0;
 
     h2 {
@@ -344,6 +345,7 @@ $prm-font-size : 12px;
 
     p {
         margin-bottom: 1em;
+        color: black !important;
     }
 }
 
