--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -80,6 +80,12 @@
             border-radius: 21px;
         }
 
+        .content-wraps{
+            p{
+                color: black !important;
+            }
+        }
+
     }
 }
 
@@ -96,6 +102,7 @@
     }
 
     .middle-params {
+        color: black !important;
         width: 70%;
         margin: 0 auto !important;
     }
@@ -132,6 +139,10 @@
 
     h1 {
         font-size: 3em;
+    }
+
+    p{
+        color:black !important;
     }
 
     .span-tagline {
